--- a/InfoSmaltimento.html
+++ b/InfoSmaltimento.html
@@ -9,19 +9,25 @@
     <title>Collapsible sidebar using Bootstrap 4</title>
 
     <!-- Bootstrap CSS CDN -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css"
+          integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
     <!-- Our Custom CSS -->
     <link rel="stylesheet" href="styletemplate.css">
     <!-- Scrollbar Custom CSS -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/malihu-custom-scrollbar-plugin/3.1.5/jquery.mCustomScrollbar.min.css">
+    <link rel="stylesheet"
+          href="https://cdnjs.cloudflare.com/ajax/libs/malihu-custom-scrollbar-plugin/3.1.5/jquery.mCustomScrollbar.min.css">
 
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 
     <!-- Font Awesome JS -->
-    <script defer src="https://use.fontawesome.com/releases/v5.0.13/js/solid.js" integrity="sha384-tzzSw1/Vo+0N5UhStP3bvwWPq+uvzCMfrN1fEFe+xBmv1C/AtVX5K0uZtmcHitFZ" crossorigin="anonymous"></script>
-    <script defer src="https://use.fontawesome.com/releases/v5.0.13/js/fontawesome.js" integrity="sha384-6OIrr52G08NpOFSZdxxz1xdNSndlD4vdcf/q2myIUVO0VsqaGHJsB0RaBE01VTOY" crossorigin="anonymous"></script>
+    <script defer src="https://use.fontawesome.com/releases/v5.0.13/js/solid.js"
+            integrity="sha384-tzzSw1/Vo+0N5UhStP3bvwWPq+uvzCMfrN1fEFe+xBmv1C/AtVX5K0uZtmcHitFZ"
+            crossorigin="anonymous"></script>
+    <script defer src="https://use.fontawesome.com/releases/v5.0.13/js/fontawesome.js"
+            integrity="sha384-6OIrr52G08NpOFSZdxxz1xdNSndlD4vdcf/q2myIUVO0VsqaGHJsB0RaBE01VTOY"
+            crossorigin="anonymous"></script>
 
 </head>
 
@@ -34,7 +40,6 @@
             <i class="fa fa-address-card" style="font-size:36px"></i>
             <h3>Benvenuto Utente</h3>
         </div>
-
 
 
         <ul class="list-unstyled components">
@@ -62,44 +67,40 @@
 
     <!-- Page Content  -->
     <div id="content">
+        <div class="text-center mb-4">
+            <img class="mb-4" src="Logo.png" alt="Ecologic island" width="180" height="180">
+        </div>
 
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <div class="container-fluid">
+
+        <h2 style="align-content: center; align-items: center; text-align: center">
+        <span style="text-align: center;align-items: center;align-content:center; color: white "
+              class="badge bg-secondary">Informazioni Smaltimento Rifiuti</span>
+        </h2>
 
 
+        <div id="accordion">
 
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="nav navbar-nav justify-content-center">
-                        <li class="nav-item">
-                            <h2>Informazioni di smaltimento</h2>
-                        </li>
-
-                    </ul>
+            <div class="card">
+                <h5 class="card-header">Rifiuti smaltibili</h5>
+                <div class="card-body">
+                    <p class="card-text">
+                    <li>Divani;</li>
+                    <br>
+                    <li>Elettrodomestrici;</li>
+                    <br>
+                    <li>Lavatrici;</li>
+                    <br>
+                    <li>Armadi e mobili;</li>
+                    <br>
+                    <li>Batterie esaurite;</li>
+                    <br>
+                    <li>Componenti meccanici.</li>
+                    <br>
+                    </p>
                 </div>
             </div>
-        </nav>
 
-
-
-
-
-            <div id="accordion">
-
-                <div class="card">
-                    <h5 class="card-header">Rifiuti smaltibili</h5>
-                    <div class="card-body">
-                        <p class="card-text">
-                            <li>Divani;</li><br>
-                            <li>Elettrodomestrici;</li><br>
-                            <li>Lavatrici;</li><br>
-                            <li>Armadi e mobili;</li><br>
-                            <li>Batterie esaurite;</li><br>
-                            <li>Componenti meccanici.</li><br>
-                        </p>
-                    </div>
-                </div>
-
-            </div>
+        </div>
 
         <div id="accordion">
 
@@ -107,7 +108,8 @@
                 <h5 class="card-header">Isola ecologica più vicina in base alla tua posizione</h5>
                 <div class="card-body">
                     <p class="card-text text-center">
-                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3027.1511334001234!2d14.819551615315348!3d40.64859877933888!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x133bc2a288312241%3A0xe8026e39f8d61311!2sIsola%20Ecologica%20Arechi!5e0!3m2!1sen!2sit!4v1624091390487!5m2!1sen!2sit" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3027.1511334001234!2d14.819551615315348!3d40.64859877933888!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x133bc2a288312241%3A0xe8026e39f8d61311!2sIsola%20Ecologica%20Arechi!5e0!3m2!1sen!2sit!4v1624091390487!5m2!1sen!2sit"
+                                width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
                     </p>
                 </div>
             </div>
@@ -120,13 +122,20 @@
                 <h5 class="card-header">Orari di apertura e chiusura</h5>
                 <div class="card-body">
                     <p class="card-text">
-                    <li>Lunedì 9:00 - 13:00 / 15:00 - 18:00</li><br>
-                    <li>Martedì 9:00 - 13:00 / 15:00 - 18:00</li><br>
-                    <li>Mercoledì 9:00 - 13:00 / 15:00 - 18:00</li><br>
-                    <li>Giovedì 9:00 - 13:00 / 15:00 - 18:00</li><br>
-                    <li>Venerdì 9:00 - 13:00 / 15:00 - 18:00</li><br>
-                    <li>Sabato chiuso</li><br>
-                    <li>Domenica chiuso</li><br>
+                    <li>Lunedì 9:00 - 13:00 / 15:00 - 18:00</li>
+                    <br>
+                    <li>Martedì 9:00 - 13:00 / 15:00 - 18:00</li>
+                    <br>
+                    <li>Mercoledì 9:00 - 13:00 / 15:00 - 18:00</li>
+                    <br>
+                    <li>Giovedì 9:00 - 13:00 / 15:00 - 18:00</li>
+                    <br>
+                    <li>Venerdì 9:00 - 13:00 / 15:00 - 18:00</li>
+                    <br>
+                    <li>Sabato chiuso</li>
+                    <br>
+                    <li>Domenica chiuso</li>
+                    <br>
                     </p>
                 </div>
             </div>
@@ -134,20 +143,24 @@
         </div>
 
 
-
-        </div>
+    </div>
 
 </div>
 
 <!-- jQuery CDN - Slim version (=without AJAX) -->
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
 <!-- Popper.JS -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js" integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js"
+        integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ"
+        crossorigin="anonymous"></script>
 <!-- Bootstrap JS -->
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js" integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js"
+        integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm"
+        crossorigin="anonymous"></script>
 <!-- jQuery Custom Scroller CDN -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/malihu-custom-scrollbar-plugin/3.1.5/jquery.mCustomScrollbar.concat.min.js"></script>
-
 
 
 </body>
