--- a/LeMieRichieste.html
+++ b/LeMieRichieste.html
@@ -67,26 +67,12 @@
 
     <!-- Page Content  -->
     <div id="content">
-
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <div class="container-fluid">
-
-
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="nav navbar-nav ml-auto">
-                        <li class="nav-item active">
-                            <form class="form-inline">
-                                <input class="form-control mr-sm-2" type="search" placeholder="Search"
-                                       aria-label="Search">
-                                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-                            </form>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
+        <div class="text-center mb-4">
+            <img class="mb-4" src="Logo.png" alt="Ecologic island" width="180" height="180">
+        </div>
         <h2 style="align-content: center; align-items: center; text-align: center">
-            <span style="text-align: center;align-items: center;align-content:center " class="badge badge-info">Hai una richiesta</span>
+        <span style="text-align: center;align-items: center;align-content:center; color: white"
+              class="badge bg-secondary">Hai una richiesta</span>
         </h2>
 
         <div class="row">
@@ -111,7 +97,7 @@
         </div>
     </div>
 
-    </div>
+</div>
 </div>
 
 <!-- jQuery CDN - Slim version (=without AJAX) -->
