--- a/NuovaRichiesta.html
+++ b/NuovaRichiesta.html
@@ -68,24 +68,16 @@
     <!-- Page Content  -->
     <div id="content">
 
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <div class="container-fluid">
-
-
-
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="nav navbar-nav justify-content-center">
-                        <h2>Effettua una nuova richiesta di smaltimento</h2>
-                    </ul>
-                </div>
-            </div>
-        </nav>
 
         <div class="text-center mb-4">
-            <img class="mb-4" src="Logo.png" alt="Ecologic island" width="250" height="250">
+            <img class="mb-4" src="Logo.png" alt="Ecologic island" width="180" height="180">
         </div>
+        <h2 style="align-content: center; align-items: center; text-align: center">
+        <span style="text-align: center;align-items: center;align-content:center; color: white"
+              class="badge bg-secondary">Effettua una nuova richiesta di smaltimento</span>
+        </h2>
 
-        <div id="accordion">
+               <div id="accordion">
 
             <div class="card">
                 <h5 class="card-header">Inserisci i tuoi dati</h5>
@@ -93,19 +85,23 @@
                     <form>
                         <div class="form-group">
                             <label for="exampleInputName1">Nome</label>
-                            <input type="name" class="form-control" id="exampleInputName1" aria-describedby="nameHelp" placeholder="Inserisci il nome" required>
+                            <input type="name" class="form-control" id="exampleInputName1" aria-describedby="nameHelp"
+                                   placeholder="Inserisci il nome" required>
                         </div>
                         <div class="form-group">
                             <label for="exampleInputCogn1">Cognome</label>
-                            <input type="cognome" class="form-control" id="exampleInputCogn1" placeholder="Inserisci il cognome" required>
+                            <input type="cognome" class="form-control" id="exampleInputCogn1"
+                                   placeholder="Inserisci il cognome" required>
                         </div>
                         <div class="form-group">
                             <label for="exampleInputAddress">Indirizzo</label>
-                            <input type="address" class="form-control" id="exampleInputAddress" placeholder="Inserisci il tuo indirizzo" required>
+                            <input type="address" class="form-control" id="exampleInputAddress"
+                                   placeholder="Inserisci il tuo indirizzo" required>
                         </div>
                         <div class="form-group">
                             <label for="exampleInputDescr">Descrizione</label>
-                            <input type="decsription" class="form-control" id="exampleInputDescr" placeholder="Inserisci una descrizione" required>
+                            <input type="decsription" class="form-control" id="exampleInputDescr"
+                                   placeholder="Inserisci una descrizione" required>
                         </div>
 
                         <div class="custom-file">
@@ -120,7 +116,8 @@
 
                     <div id="messageSucc" style="visibility: hidden">
                         <div class="alert alert-success" role="alert">
-                            Richiesta effettuata con successo! <a href="./index.html" class="alert-link">Torna alla home</a>.
+                            Richiesta effettuata con successo! <a href="./index.html" class="alert-link">Torna alla
+                            home</a>.
                         </div>
                     </div>
                 </div>
@@ -133,10 +130,10 @@
 
 <script>
 
-        function sendReq(){
-            var x = document.getElementById('messageSucc');
-            x.style.visibility = 'visible';
-        }
+    function sendReq() {
+        var x = document.getElementById('messageSucc');
+        x.style.visibility = 'visible';
+    }
 
 
 </script>
